Change output type for one vignette.

--- a/vignettes/makinggraphs.Rmd
+++ b/vignettes/makinggraphs.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Making Graphs"
-output: html_document
+output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Making graphs}
   %\VignetteEngine{knitr::rmarkdown}
