--- a/inst/rmarkdown/templates/samplingcounties/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/samplingcounties/skeleton/skeleton.Rmd
@@ -104,8 +104,17 @@ population perfectly.
 
 Now let's look at some descriptive statistics for the 2 samples.
 
-Use  summary(), and  var()  for the two samples to compare the means of several interval variables.
+Use  summary(), and  var()  for the two samples to compare the means of  PCTPOVALL_2013 and Percent.of.adults.with.less.than.a.high.school.diploma..2009.2013.
+
 Use table() to look at the distribution of counties by state.
+
+Run a regression with PCTPOVALL_2013 as the dependent variable and  
+Percent.of.adults.with.less.than.a.high.school.diploma..2009.2013 as the independent variable.
+
+Remember that is done with
+myregression <- lm(dependent ~ independent, data = datasetname)
+summary(myregression)
+
 Remember that there is [documentation here](https://github.com/SOC345/lehmansociology/tree/master/vignettes).
 
 ```{r sample_univariates}
