--- a/vignettes/lehmansociology.Rmd
+++ b/vignettes/lehmansociology.Rmd
@@ -12,4 +12,7 @@ vignette: >
 The vignettes are going to show some important examples of how to use this package.
 
 [Making Graphs](http:makinggraphs)
+[Univariate Statistics](http:univariatestatistics)
+[Regression](http:regressionanalysis)
+[Making Tables](makingtables)
 
