--- a/vignettes/lehmansociology.Rmd
+++ b/vignettes/lehmansociology.Rmd
@@ -4,9 +4,9 @@ author: "Elin Waring"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Lehman Sociology}
+  %\VignetteIndexEntry{Making Tables}
   %\VignetteEngine{rmarkdown::render}
-  %\VignetteEncoding{UTF-8}
+  %\usepackage[utf8]{UTF-8}
 ---
 
 Lehmansociology is a package that we are creating as we develop the course Sociology 345
