--- a/vignettes/makingtables.Rmd
+++ b/vignettes/makingtables.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Making Tables}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{rmarkdown::render}
   %\usepackage[utf8]{UTF-8}
 ---
 ```{r}
