--- a/vignettes/makinggraphs.Rmd
+++ b/vignettes/makinggraphs.Rmd
@@ -3,7 +3,7 @@ title: "Making Graphs"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Making Tables}
-  %\VignetteEngine{rmarkdown::render}
+  %\VignetteEngine{knitr::rmarkdown}
   %\usepackage[utf8]{UTF-8}
 ---
 ```{r, include = FALSE}
