--- a/vignettes/makinggraphs.Rmd
+++ b/vignettes/makinggraphs.Rmd
@@ -2,7 +2,7 @@
 title: "Making Graphs"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Making Tables}
+  %\VignetteIndexEntry{Making Graphs}
   %\VignetteEngine{knitr::rmarkdown}
   %\usepackage[utf8]{UTF-8}
 ---
